--- a/paralax website/styles.css
+++ b/paralax website/styles.css
@@ -8,4 +8,89 @@ html,body{
     position:relative;
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
+}
+.img2{
+    background-image: url(/img2.jpg);
+    min-height: 500px;
+    position:relative;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.img3{
+    background-image: url(/img3.jpg);
+    min-height: 400px;
+    position:relative;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.text1{
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    color: black;
+    font-size: 29px;
+    letter-spacing: 9px;
+    text-transform: uppercase;
+}
+.text-bag{
+    background-color: rgb(22, 20, 20);
+    color: white;
+    padding: 20px;
+}
+.section{
+    padding:50px 80px;
+    text-align: center;
+}
+.section-second{
+    background-color: #282e34;
+    color: rgb(223, 27, 27);
+}
+.text2{
+    position: absolute;
+    top: 50%;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    width: 100%; 
+    font-size: 29px;
+    letter-spacing: 9px;
+    text-transform: uppercase;
+}
+.text-bag2{
+    background-color: rgb(22, 20, 20);
+    color: white;
+    padding: 20px;
+}
+.section1{
+    padding:50px 80px;
+    text-align: center;
+}
+.section-third{
+    background-color: #282e34;
+    color: rgb(223, 27, 27);
+}
+.text3{
+    position: absolute;
+    top: 50%;
+    text-align: center;
+    color: white;
+    width: 100%;
+    font-size: 29px;
+    letter-spacing: 9px;
+    text-transform: uppercase;
+}
+.text-bag3{
+    background-color: #282e34;
+    color: white;
+}
+.section2{
+    padding: 50px 80px;
+    text-align: center;
+    background-color: #282e34;
+}
+.section-forth{
+    color: red;
 }
