--- a/landing webpage/styles.css
+++ b/landing webpage/styles.css
@@ -1,3 +1,4 @@
+/* FIRST IMAGE AND TEXT Align */
 html,body{
     height: 100%;
     margin: 0;
@@ -10,3 +11,46 @@ html,body{
     background-size: cover;
     background-repeat: no-repeat;
 }
+.text-bag1{
+position: absolute;
+top: 30%;
+width: 100%;
+text-align: center;
+color: rgb(255, 255, 255);
+font-size: 72px;;
+text-transform: uppercase;
+}
+h1{
+position: absolute;
+width: 336px;
+height: 84px;
+left: 313px;
+top: 53px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 72px;
+line-height: 84px;
+
+color: #FFFFFF;
+
+}
+.text-bag{
+position: absolute;
+width: 336px;
+height: 84px;
+left: 413px;
+top: 133px;
+
+
+font-family: 'Roboto';
+font-style: normal;
+
+font-size: 22px;
+line-height: 84px;
+
+color: #FFFFFF;
+
+}
+/* create section */
