--- a/landing webpage/styles.css
+++ b/landing webpage/styles.css
@@ -1,9 +1,15 @@
 /* FIRST IMAGE AND TEXT Align */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-html,body{
-    height: 100%;
-    margin: 0;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;  
 }
+html,body{
+    line-height: 1.4;
+    font-weight: 300;  
+    font-family: 'Roboto', sans-serif;
+  }
 .img1{
     background-image: url(/image/img.jpg);
     min-height: 100VH;
@@ -19,7 +25,9 @@ html,body{
   margin: 0 auto;
   padding-top: 64px;
   padding-left: 16px;
-} .text-bag1{
+  
+}
+/* .text-bag1{
 position: absolute;
 top: 30%;
 width: 100%;
@@ -27,20 +35,12 @@ text-align: center;
 color: rgb(255, 255, 255);
 font-size: 29px;;
 text-transform: uppercase;
-} 
-/* .text-bag{
-position: absolute; */
-/* width: 336px;
-height: 84px;
-left: 413px;
-top: 133px;
-font-family: 'Roboto';
-font-style: normal;
-font-size: 22px;
-line-height: 84px;
-color: #FFFFFF;
+}  */
+.text-bag{
+/* font-size: 72px; */
+font-weight: 400;
 }
-/* create section */
+/* create section
 /* .section{
     background-color: #161619;
     padding: 10px;
