--- a/landing webpage/styles.css
+++ b/landing webpage/styles.css
@@ -92,6 +92,7 @@ font-weight: 400;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 20px;
 }
 .card:hover{
   transform:scale(1.04);
@@ -104,4 +105,73 @@ font-weight: 400;
 }
 .card_content h3 {
   margin-bottom: 10px;
+}
+.bottom-section{
+  display: flex;
+}
+.contact-me{
+  background-color: #515603;;
+  
+}
+.About-me{
+  background-color: #722300;
+}
+.contact-me,.About-me{
+  min-height: 300px;
+  padding: 32px;
+  color: white;
+}
+.contact-me h1,.About-me h1{
+  font-size: 64px;
+  font-weight: 300;
+}
+.contact-me p,.About-me p{
+  margin-bottom: 20px;
+}
+footer{
+  text-align: center;
+  text-transform: uppercase;
+  background-color: #000;
+  padding: 20px;
+  color: white;
+}
+@media(max-width:786px) {
+  .img1{
+    min-height: 50vh;
+  }  
+  .text1-container{
+    padding: 10px 0;
+    text-align: center;
+  }
+  .text-bag{
+    font-size: 32px;
+  }
+  .black-box h1{
+    font-size: 24px;
+  }
+  .black-box h1 span {
+    font-weight: 400;
+    font-size: 32px;
+  }
+  .bottom-section {
+    flex-direction: column;
+  }
+  h1 {
+    font-size: 32px;
+  }
+  .About-me h2,
+  .contact-me h2 {
+    font-size: 32px;
+  }
+  .black-box h2{
+    font-size: 24px;
+  }
+  .black-box h2 span {
+    font-weight: 400;
+    font-size: 32px;
+  }
+  .grid-item{
+    font-weight: 0;
+    
+  }
 }
