--- a/youtube-clone/styles.css
+++ b/youtube-clone/styles.css
@@ -50,46 +50,22 @@ nav{
     justify-content: center;
     gap: 20px;
 }
-/* }
-.library{
-    font-size: 15px;
+.tags{
     display: flex;
-    margin-left: 10px;
-    width: 12px; 
-    color: #000000;
-    justify-content: center;
-    flex-wrap: wrap;
-
-} */
-/* .search1{
-    display: flex;
-    justify-content: center;
-    position: relative;
-    margin-left: 50px;
-    bottom:40px ;
-    gap: 50px;
-    
-    
-} */
-/* .search-text{
-display: flex;
- position:relative; */
-    /* top: 10px;
-    right: 5px;
-    flex-wrap: wrap; */
-    /* min-width: 600px;
     padding: 10px 20px;
-    border: 0.5px solid #ccc; */
-/* }
-.second-bar{
-    width: 300px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-   
-
-} */
-
-
-
+    gap: 15px;
+    border-top: 1px solid white;
+}
+.tag{
+    padding: 5px 15px;
+    border-radius: 20px;
+    border: 1px solid rgb(22, 22, 22);
+}
+.black{
+ background-color: black;
+ color: white;
+}
+.light{
+    background-color:#f3f2f2;
+    color:black;
+}
